Fix Skill Icons on Mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1361,6 +1361,12 @@ video {
   }
 }
 
+.inline-flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
 #skill h1 {
   color: white;
 }
